--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PROJECT_ID=your-google-cloud-project-id
 NEWS_API_KEY=your-newsapi-key
+RAPIDAPI_KEY=your-rapidapi-key
 # Optional (either set this to a service account JSON path or use gcloud ADC):
 # GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
 # Optional BigQuery and Vertex settings
