--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["express", "career", "vertexai", "bigquery", "news"],
+  "keywords": [
+    "express",
+    "career",
+    "vertexai",
+    "bigquery",
+    "news"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.6.0",
     "@google-cloud/bigquery": "^7.3.0",
-  "@google-cloud/vertexai": "^1.7.0",
-    "google-auth-library": "^9.4.0",
+    "@google-cloud/talent": "^7.1.1",
+    "@google-cloud/vertexai": "^1.7.0",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "google-trends-api": "^4.9.2",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "google-auth-library": "^9.4.0",
+    "google-trends-api": "^4.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
