--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@google-cloud/bigquery": "^7.3.0",
     "@google-cloud/talent": "^7.1.1",
     "@google-cloud/vertexai": "^1.7.0",
+    "@google/adk": "^0.2.1",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -30,6 +31,9 @@
     "google-trends-api": "^4.9.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@google/adk-devtools": "^0.2.1",
+    "@types/node": "^25.0.3",
+    "nodemon": "^3.0.2",
+    "typescript": "^5.9.3"
   }
 }
